[package]
name = "slvr_rust_lib"
version = "0.1.0"
edition = "2024"

[features]
tauri_wasm = ["slvr_rust_lib_common/tauri_wasm", "slvr_rust_lib_build/tauri_wasm", "slvr_rust_lib_macro/tauri_wasm", "serde/derive"]
tauri_wasm_frontend = ["tauri_wasm","slvr_rust_lib_common/tauri_wasm_frontend"]
tauri_wasm_backend = ["tauri_wasm","slvr_rust_lib_common/tauri_wasm_backend"]
encapsulation = ["slvr_rust_lib_common/encapsulation", "slvr_rust_lib_macro/encapsulation"]

[dependencies]
slvr_rust_lib_build = { path = "../slvr_rust_lib_build", optional = true }
slvr_rust_lib_macro = { path = "../slvr_rust_lib_macro", optional = true }
slvr_rust_lib_common = { path = "../slvr_rust_lib_common", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
