[package]
name = "slvr_rust_lib_common"
version = "0.1.0"
edition = "2024"

[features]
tauri_wasm = ["serde/derive", "serde-wasm-bindgen","wasm-bindgen", "wasm-bindgen-futures"]
tauri_wasm_frontend = ["tauri_wasm"]
tauri_wasm_backend = ["tauri_wasm"]
encapsulation = []
error = []


[dependencies]
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }