[package]
name = "slvr_rust_lib_macro"
version = "0.1.0"
edition = "2024"

[features]
tauri_wasm_frontend = ["tauri_wasm"]
tauri_wasm_backend = ["tauri_wasm"]
tauri_wasm = []
encapsulation = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106", features = ["full"] }
proc-macro2 = "1.0.101"
quote = "1.0.40"
# to snake case does not build on current editions of rust because of feature flag weirdness, temporarally copied the code into a file and patched it
#to_snake_case = { version = "0.1.1", optional = true }
